--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,6 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+eth_rpc_url = 'https://rpc.ankr.com/eth_sepolia'
+etherscan_api_key = '${ETHERSCAN_KEY}'
